kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-minikube
  labels:
    app: hello-minikube
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-minikube
  template:
    metadata:
      labels:
        app: hello-minikube
    spec:
      containers:
      - name: hello-minikube
        image: denhamparry/hellominikube:0.1
        ports:
        - containerPort: 5000
