kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-minikube
spec:
  selector:
    app: hello-minikube
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
